--- a/src/main/resources/utils/config.properties
+++ b/src/main/resources/utils/config.properties
@@ -2,4 +2,4 @@ username : mercury.bootcamp@testleaf.com
 password : Bootcamp@123
 leaftapsUsername : DemoSalesManager
 leaftapsPassword : crmsfa
-browser : firefox
+browser : chrome
